# szu-thesis-md-template

./: .gitignore  LICENSE  README.md  pyproject.toml
release/: output.docx
scripts/: build.py  fix_quotes.py  make_reference_docx.py
skills/: README.md  build-and-verify.md  chinese-typography.md  citations-and-references.md  custom-style-blocks.md  figures-and-tables.md  writing-chapter.md  writing-full-thesis.md
templates/: cover.docx  honor.docx
thesis/: 00_frontmatter.md  01_intro.md  02_related.md  03_method.md  04_theory.md  05_experiments.md  06_conclusion.md  07_references.md  08_ack.md  09_abstract_en.md  10_appendix.md  _info.md
